# composable-tower-http

./: Cargo.toml  README.md  cspell.json
.github/workflows/: tests.yml
examples/: and.rs  and_or.rs  any.rs  api_key.rs  async_chain.rs  axum.rs  basic_auth.rs  chain.rs  jwt.rs  jwt_email_verfied.rs  jwt_email_verfied_lite.rs  jwt_email_verified.rs  jwt_email_verified_lite.rs  jwt_groups.rs  jwt_random_verification.rs  map.rs  map_err.rs  optional.rs  or.rs  or_and.rs  validate.rs
src/: error.rs  lib.rs  test.rs
src/authorize/: authorizer.rs  mod.rs
src/authorize/authorizers/: mod.rs
src/authorize/authorizers/api_key/: mod.rs
src/authorize/authorizers/api_key/impls/: api_key.rs  default_api_key_authorizer.rs  mod.rs
src/authorize/authorizers/basic_auth/: mod.rs
src/authorize/authorizers/basic_auth/impls/: basic_auth_user.rs  default_basic_auth_authorizer.rs  mod.rs
src/authorize/authorizers/jwt/: mod.rs
src/authorize/authorizers/jwt/impls/: default_jwt_authorizer.rs  mod.rs  validation.rs
src/authorize/authorizers/jwt/jwk_set/: jwk_set_provider.rs  mod.rs
src/authorize/authorizers/jwt/jwk_set/fetch/: jwk_set_fetcher.rs  mod.rs
src/authorize/authorizers/jwt/jwk_set/fetch/impls/: http_jwk_set_fetcher.rs
src/authorize/authorizers/jwt/jwk_set/impls/: mod.rs
src/authorize/authorizers/jwt/jwk_set/impls/rotating/: background_rotating_jwk_set_provider.rs  jwk_set_fetcher.rs  mod.rs  rotating_jwk_set_provider.rs
src/authorize/authorizers/jwt/jwk_set/impls/rotating/impls/: http_jwk_set_fetcher.rs  mod.rs
src/authorize/extract/: authorization_extractor.rs  authorized.rs  authorized_ext.rs  mod.rs  sealed_authorized.rs  validated_authorized.rs
src/authorize/header/: header_extractor.rs  mod.rs
src/authorize/header/basic_auth/: basic_auth_extractor.rs  mod.rs
src/authorize/header/basic_auth/impls/: default_basic_auth_extractor.rs  mod.rs
src/authorize/header/bearer/: bearer_extractor.rs  mod.rs
src/authorize/header/bearer/impls/: default_bearer_extractor.rs  mod.rs
src/authorize/header/impls/: default_header_extractor.rs  mod.rs
src/authorize/then/: mod.rs  then_authorizer.rs
src/chain/: chain_extractor.rs  mod.rs
src/extension/: layer.rs  mod.rs  service.rs
src/extension/modify/: layer.rs  mod.rs  service.rs
src/extract/: and.rs  any.rs  convert.rs  extracted.rs  extractor.rs  map.rs  mod.rs  optional.rs  or.rs  sealed_extracted.rs
src/extract/chain/: chainer.rs  lite.rs  mod.rs
src/map/: mapper.rs
src/modify/: modifier.rs
src/validate/: mod.rs  validator.rs
src/validate/extract/: mod.rs  sealed_validated.rs  validated.rs  validated_ext.rs  validation_extractor.rs
util/: util.rs
